--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
+    "@tanstack/react-query": "^5.20.1",
     "autoprefixer": "10.4.17",
     "geist": "^1.2.1",
     "next": "latest",
