--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.2.9",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
-    "@tanstack/react-query": "^5.20.1",
     "autoprefixer": "10.4.17",
+    "framer-motion": "^11.0.3",
     "geist": "^1.2.1",
     "next": "latest",
     "postcss": "8.4.33",
